ANTRIAN - Add Broadcaster

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
-APP_NAME="Zivar Core - Laravel 11"
+APP_NAME="Antrian PTSP"
+APP_NICKNAME="Queue PTSP"
 APP_ENV=local
-APP_KEY=base64:W3Uw0qqQiqBC8MBLaqiPCHx+3Kt7EGfO67YAbOgWhiE=
+APP_KEY=base64:OYPCosQEGqCSHLhiLMrOjCXnIxy5tmI8UlXQizkDUO8=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://ZivarCore-L11.test
+APP_URL=http://antrian-ptsp-v2.test
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=id
+APP_FALLBACK_LOCALE=id
+APP_FAKER_LOCALE=id_ID
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
@@ -19,20 +20,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=zivar_pro
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=antrian_ptsp
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
+SESSION_LIFETIME=60
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
-BROADCAST_CONNECTION=log
+BROADCAST_CONNECTION=reverb
+BROADCAST_DRIVER=reverb
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
@@ -70,3 +72,18 @@ RECAPTCHA_SITE_KEY=
 RECAPTCHA_SECRET_KEY=
 
 SOCIALITE_ACTIVE=false
+DATATABLES_ERROR='throw'
+
+REVERB_APP_ID=675013
+REVERB_APP_KEY=v4pufakqkl42bxubsvin
+REVERB_APP_SECRET=qtnhwhxljj0f3qiuwiyv
+REVERB_HOST="antrian-ptsp-v2.test"
+REVERB_PORT=8080
+REVERB_SERVER_HOST="0.0.0.0"
+REVERB_SERVER_PORT=8080
+REVERB_SCHEME=http
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
