--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "biscolab/laravel-recaptcha": "^6.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.1",
         "laravel/sanctum": "^4.0",
         "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.9",
